feat: add favicon for improved branding

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Hiking Water Carry Calculator</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <script type="module" src="https://cdn.jsdelivr.net/npm/@esri/calcite-components@5.0.2/dist/cdn/index.js"></script>
     <style>
         * {
