feat: add footer with copyright and usage disclaimer for improved user guidance

--- a/index.html
+++ b/index.html
@@ -177,6 +177,25 @@
             color: var(--calcite-color-text-3);
         }
 
+        .footer {
+            margin-top: 32px;
+            padding-top: 24px;
+            border-top: 1px solid var(--calcite-color-border-3);
+            text-align: center;
+            font-size: 11px;
+            color: var(--calcite-color-text-3);
+            line-height: 1.6;
+        }
+
+        .footer p {
+            margin: 8px 0;
+        }
+
+        .footer .copyright {
+            font-weight: 500;
+            color: var(--calcite-color-text-2);
+        }
+
         calcite-label {
             color: var(--calcite-color-text-1);
             font-size: 13px;
@@ -444,6 +463,11 @@
                 <div class="result-details" id="result-details"></div>
             </div>
         </calcite-card>
+
+        <div class="footer">
+            <p class="copyright">© 2026. All rights reserved.</p>
+            <p>This calculator provides estimates only. Actual water needs vary based on individual physiology, fitness level, exertion intensity, and environmental conditions. Always carry extra water and consult with medical professionals regarding your specific hydration needs. The creators accept no liability for decisions made based on these calculations.</p>
+        </div>
     </div>
 
     <script type="module">
